Fix Website and icon alignment

--- a/app/components-react/pages/layout-editor/LayoutEditor.m.less
+++ b/app/components-react/pages/layout-editor/LayoutEditor.m.less
@@ -143,8 +143,11 @@
     color: var(--border);
   }
 
-  .url-text-box {
-    margin-top: 2rem;
+  .url-input {
+    position: absolute;
+    width: 100%;
+    padding: 20px 10%;
+    top: 50%;
   }
 }
 
